--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
         <div class="main-content">
-            <section class="home section hidden">
+            <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
