--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Blog</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#blog"><i class="fa fa-list"></i>Blog</a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
 
             </ul>
         </div>
 
 
-        <div class="main-content">
+        <div class="main-content" id="home">
             <section class="home section">
                 <div class="container">
                     <div class="row">
@@ -69,7 +69,7 @@
 
             <!--ABOUT-->
 
-            <section class="about section  ">
+            <section class="about section " id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -234,7 +234,7 @@
             </section>
 
             <!--Services-->
-            <section class="service section ">
+            <section class="service section " id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -310,7 +310,7 @@
 
 
 
-            <section class="portfolio section ">
+            <section class="portfolio section " id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -372,7 +372,7 @@
 
 
 
-            <section class="blog section  ">
+            <section class="blog section  " id="blog">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -433,7 +433,7 @@
             </section>
 
 
-            <section class="contact section">
+            <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -527,6 +527,7 @@
     </div>
 
     <!--===== JS =======-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="script/js.js"></script>
     <script src="script/style-switcher.js"></script>
 </body>
