--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name"> Fatou Sy </span> </h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere doloribus delectus asperiores consequuntur qui debitis reprehenderit ea eius eaque, saepe illo mollitia ipsa? Obcaecati nostrum ab deleniti autem. Unde, nobis!</p>
+                            <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and a interest of programing and science blog. I want to share my world with you.</p>
                             <a href="#contact" class="btn hire-me"> Hire  Me </a>
                         </div>
 
@@ -81,8 +81,12 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Fatou Sy and <span> Web Developer</span></h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, eaque blanditiis sit hic illo omnis nisi beatae, veritatis qui fuga, earum at dolor voluptatum quam sunt eius nesciunt dolorem et.Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sit qui eos. Eaque voluptatibus aliquid laudantium, autem numquam, recusandae provident reprehenderit cum accusamus repellendus, rerum ratione aut earum perferendis. Ducimus.
+                                    <p>Hey, this is my About Me page, so I have to say something about <b>myself</b>. Sometimes it is hard to introduce yourself because you know yourself so well that you do not know where to start with. Let me give a try to see what kind of image you have <b>about me</b> through my self-description. I hope that my impression about myself and your impression about me are not so different. Here it goes.
                                     </p>
+                                    <p >I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen. I like to see the sunrise in the morning, I like to see the moonlight at night; Is there something else? Let's see !
+                                 </p>
+                                     <p class>I always wanted to be a great writer, like Victor Hugo who wrote "Les Miserable", or like Roman Roland who wrote "John Christopher". They have influenced millions of people through their books. I also wanted to be a great psychologist, like William James or Sigmund Freud, who could read people’s minds. Of course, I am nowhere close to these people, yet. I am just someone who does some teaching, some research, some writing and some software development. But my dream is still alive.  </p>
+                                     <p >Try to get a little idea of ​​my person through <b> this portfolio</b>. Who knows ? We may even share the same visions. You will tell me more at the end of your viewing.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -326,42 +330,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic1">
+                                    <a href="http://127.0.0.1:5502/index.html"><img src="Portfolio.Images/ScreenshotMiPizza.jpg" alt="pic1"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic2">
+                                    <a href=""><img src="Portfolio.Images/childImage.jpg" alt="pic2"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic3">
+                                    <a href=""><img src="Portfolio.Images/childImage.jpg" alt="pic3"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic4">
+                                    <a href="MiPizzaProgress.html"><img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic4"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic5">
+                                   <a href="TodoListProgress.html"> <img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic5"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic5">
+                                    <a href="WeatherAppProgress.html"><img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic6"></a>
                                 </div>
                             </div>
                         </div>
@@ -388,42 +392,45 @@
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic1">
+                                    <a href="https://fsndiaye.github.io/BLOG/boeinghq.html"><img src="images/Boeing1.jpg" alt="pic1"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic2">
+                                   <a href="https://fsndiaye.github.io/BLOG/designatboeing.html"><img src="images/boeingimg2.jpg" alt="pic2"></a> 
                                 </div>
                             </div>
                         </div>
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic3">
+                                    <a href="https://fsndiaye.github.io/BLOG/boeing737max.html">
+                                        <img src="images/boeing737.jpg" alt="pic3">
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic4">
+                                    <a href="https://fsndiaye.github.io/BLOG/socialnetwork.html"><img src="images/socialnetwork1.jpg" alt="pic4"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic5">
+                                   <a href="https://fsndiaye.github.io/BLOG/meta.htm"> <img src="images/meta1.jpg" alt="pic5">
+                                </a> 
                                 </div>
                             </div>
                         </div>
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                    <img src="Portfolio.Images/childImage.jpg" alt="pic5">
+                                   <a href="https://fsndiaye.github.io/BLOG/webbrowsers.html"> <img src="images/edge1.jpg" alt="pic5"></a>
                                 </div>
                             </div>
                         </div>
