--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <div class="blog-item padd-15">
                             <div class="blog-item-inner shadow-dark">
                                 <div class="blog-img">
-                                   <a href="https://fsndiaye.github.io/BLOG/meta.htm"> <img src="images/meta1.jpg" alt="pic5">
+                                   <a href="https://fsndiaye.github.io/BLOG/meta.html"> <img src="images/meta1.jpg" alt="pic5">
                                 </a> 
                                 </div>
                             </div>
