--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="http://127.0.0.1:5502/index.html"><img src="Portfolio.Images/ScreenshotMiPizza.jpg" alt="pic1"></a>
+                                    <a href="http://127.0.0.1:5502/index.html"><img src="Portfolio.Images/pizzasrcreen2.jpg" alt="pic1"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href=""><img src="Portfolio.Images/childImage.jpg" alt="pic2"></a>
+                                    <a href="https://fsndiaye.github.io/To-Do-List-App/"><img src="Portfolio.Images/Screenshot (35).jpg" alt="pic2"></a>
                                 </div>
                             </div>
                         </div>
@@ -469,6 +469,26 @@
                             <div class="icon"><i class="fa fa-globe-americas"></i></div>
                             <h4>Website</h4>
                             <p> www.linkyourporfolioweb.com</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><a href=""><i class="fab fa-github"></i></a></div>
+                            <h4>github</h4>
+                            <p>Follow-me</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><a href=""><i class="fab fa-instagram"></i></a></div>
+                            <h4>Instagram</h4>
+                            <p>Follow-me</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><a href=""><i class="fab fa-linkedin"></i></a></div>
+                            <h4>linkedin</h4>
+                            <p>Follow-me</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><a href=""><i class="fab fa-facebook"></i></a></div>
+                            <h4>Facebook</h4>
+                            <p>Follow-me</p>
                         </div>
                     </div>
                     <h3 class="contact-title padd-15"> SEND ME AN EMAIL </h3>
