Contact-Form done

--- a/index.html
+++ b/index.html
@@ -471,22 +471,22 @@
                             <p> www.linkyourporfolioweb.com</p>
                         </div>
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><a href=""><i class="fab fa-github"></i></a></div>
+                            <div class="icon"><a href="https://github.com/fsndiaye"><i class="fab fa-github"></i></a></div>
                             <h4>github</h4>
                             <p>Follow-me</p>
                         </div>
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><a href=""><i class="fab fa-instagram"></i></a></div>
+                            <div class="icon"><a href="https://www.instagram.com/sokhnafatsy_/"><i class="fab fa-instagram"></i></a></div>
                             <h4>Instagram</h4>
                             <p>Follow-me</p>
                         </div>
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><a href=""><i class="fab fa-linkedin"></i></a></div>
-                            <h4>linkedin</h4>
+                            <div class="icon"><a href="https://www.linkedin.com/in/fatou-sy-ndiaye-8a9a2222a/"><i class="fab fa-linkedin"></i></a></div>
+                            <h4>linkedIn</h4>
                             <p>Follow-me</p>
                         </div>
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><a href=""><i class="fab fa-facebook"></i></a></div>
+                            <div class="icon"><a href="https://www.facebook.com/winche.ndiaye"><i class="fab fa-facebook"></i></a></div>
                             <h4>Facebook</h4>
                             <p>Follow-me</p>
                         </div>
