--- a/MiPizzaProgress.html
+++ b/MiPizzaProgress.html
@@ -20,26 +20,23 @@
         </div> 
     </div>
     <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+        <div class="item2"><img src="Portfolio.Images/ScreenshotMiPizza2(20).jpg">
+            <p> I had a little problem over here beacuse i added the price on my p tag at the first place . I wanted all prices to be be displayed vertically one after another . So decided to add a class for the pricing and work on the display method on my style sheet.
         </p>
         </div> 
     </div>
     <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+        <div class="item2"><img src="Portfolio.Images/ScreenshotMiPizza3.jpg">
+            <p> My radio buttons was displayed after the size of pizza for some reason; At the first Place I deleled the div class and write the code again because i was thinkimg that something may be wrong inside the div but i figure out later that i had to set a position absolute for the container class and relative  my radio class so I can style it .
         </p>
         </div> 
     </div>
     <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+        <div class="item2"><img src="Portfolio.Images/ScreenshotMiPizza4.jpg">
+            <p> I messed up with my code by trying to add a textarea on my 2nd grid 
+                so I will be able to display the information after coding the JS part.
+                But this was before having a critical thinking about it . i realize that I don't need a text area
+                because it is not used to display information but to enter some text. 
         </p>
         </div> 
     </div>
