--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="http://127.0.0.1:5502/index.html"><img src="Portfolio.Images/pizzasrcreen2.jpg" alt="pic1"></a>
+                                    <a href="https://fsndiaye.github.io/Mi-Pizza/"><img src="Portfolio.Images/pizzasrcreen2.jpg" alt="pic1"></a>
                                 </div>
                             </div>
                         </div>
