--- a/TodoListProgress.html
+++ b/TodoListProgress.html
@@ -13,27 +13,27 @@
     <h1>  TODO LIST PROGRESS </h1>
     <div class="container2">
         <div class="item2"><img src="Portfolio.Images/todoapScreen1.jpg">
-            <p>
+            <p class="p2">
                 I learned about fas-fa icons this week and really wanted to used it on one of my project. I had problem to display my icons , after reviewing my code 2-3 times i found that I did not add the font-awesome link that's why nothing was displaying on the screen . So i just go ahead and add my font-awesome after my style-one to make it work !!
         </p>
         </div> 
     </div>
     <div class="container2">
         <div class="item2"><img src="Portfolio.Images/todolistScreen2.jpg">
-            <p>
+            <p class="p2">
                 On my stylesheet , my linear-gradient background was not working as expected. Indeed, I had to affect the background and not the body background-color . It tooks me a couple minutes to figure out since my codes was looking ok I was not thinking about changing anything but figure out that i affected background-color by inattention . So i just change "background-color" to backgroun so i can have this beautiful color on my to-do App background !
         </p>
         </div> 
     </div>
     <div class="container2">
         <div class="item2"><img src="Portfolio.Images/todoapScrenn3.jpg">
-            <p> I had problem with my display all button . I did not like the way it displayed the text .By looking on my stylesheet , I saw that I added a width and height on the style . So I just deleted it , fixed the font-weight and the font-size . Liked the result!
+            <p class="p2"> I had problem with my display all button . I did not like the way it displayed the text .By looking on my stylesheet , I saw that I added a width and height on the style . So I just deleted it , fixed the font-weight and the font-size . Liked the result!
         </p>
         </div> 
     </div>
     <div class="container2">
         <div class="item2"><img src="Portfolio.Images/todoapScreen4.jpg">
-            <p>I think this is the biggest problem I have until now working on this To-Do list App. I declared a new class (.Active) on my stylesheet and wanted to use it on my Js file to impact my add button . It is still not working . Tried to write the code in C# and rewrite it in Js . I spent a couple hours trying to figure it out but it is still not working . Will be looking on it tomorrow . 06/11/2022.
+            <p class="p2">I think this is the biggest problem I have until now working on this To-Do list App. I declared a new class (.Active) on my stylesheet and wanted to use it on my Js file to impact my add button . It is still not working . Tried to write the code in C# and rewrite it in Js . I spent a couple hours trying to figure it out but it is still not working . Will be looking on it tomorrow . 06/11/2022.
         </p>
         </div> 
     </div>
