--- a/WeatherAppProgress.html
+++ b/WeatherAppProgress.html
@@ -11,35 +11,27 @@
 </head>
 <body>
     <h1> Weather App. PROGRESS </h1>
-    <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+    <div class="container3">
+        <div class="item2"><img src="Portfolio.Images/ScreenshotW1(41).jpg">
+            <p class="p3"> My Design was not working as expected.my texts overlapped and I did not understand why at the beginning. I tried first instead to look at the CSS properties that I assigned to my classes. I realized afterwards that the style was ok so I started to visualize my duv. element is where I realized that indeed I had not added a part inside the agreed class.
         </p>
         </div> 
     </div>
-    <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+    <div class="container3">
+        <div class="item2"><img src="Portfolio.Images/Screenshot W2(44).jpg">
+            <p class="p3">In this part I would say that it was a real challenge. After I finished my design I started doing research to find out how a wheather app would work. This is the API I learned. I started by registering on a free platform to have a key code while following some documentation on the use of API. It didn't work on the first try because the link didn't work and I didn't understand what to do with the alititute, the notion of q = (which should include the location) and how to link the key. So I had to stop and focus on the documentation to better approach and understand the concept of API.
         </p>
         </div> 
     </div>
-    <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+    <div class="container3">
+        <div class="item2"><img src="Portfolio.Images/ScreenshotW3 (45).jpg">
+            <p class="p3">So then I started to get comfortable with the insertion of the link. I indeed had to use WheatherAPI.com because for me it is much more detailed at the site level by browsing the documentation. But the problem that arose is that still I had not properly implemented the link and the key code, I did not have to put .value after city input also instead of putting apiID it is indeed key= followed of my keycode. The correction has been made in the following documention you will be able to see the modifications even if at this level also I had to encounter other issues..
         </p>
         </div> 
     </div>
-    <div class="container">
-        <div class="item2"><img src="Portfolio.Images/MiPizzaScreenshot 2 (22).jpg">
-            <p>By wanting to put the radio buttons in place, I realized that in fact it was displayed inline and it was not the desired result. So I stopped to see the problem.
-            Indeed I had not used the /br/ tag, Break . To be able to have my radio buttons arranged vertically.
-            I then fixed it using /br/ to get the desired design.
+    <div class="container3">
+        <div class="item2"><img src="Portfolio.Images/ScreenshotW4 (49).jpg">
+            <p class="p3">The problem with the insertion of the URL of my API still arise here, I had to contact my professor to discuss it. my URL did not pass and at the console it displayed that my key code was not valid. My teacher let me know that I had to specify the q= before implementing the input. I had just implemented the input without the q element. So my keyCode started to work but the problem now is that my CityInput does not work with the region specified and yet I soon put before the function: let CityInput = "London" to assign the city of london to cityInput. My teacher let me know that I have to use ConsoleLog to print it . I'm still working on it. Will probably document more .....
         </p>
         </div> 
     </div>
