--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://fsndiaye.github.io/Mi-Pizza/"><img src="Portfolio.Images/pizzasrcreen2.jpg" alt="pic1"></a>
+                                    <a href="https://fsndiaye.github.io/Mi-Pizza/"><img src="Portfolio.Images/ScreenshotMIPIZZAA (48).jpg" alt="pic1"></a>
                                 </div>
                             </div>
                         </div>
@@ -344,7 +344,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href=""><img src="Portfolio.Images/childImage.jpg" alt="pic3"></a>
+                                    <a href="https://fsndiaye.github.io/WeatherApp/"><img src="Portfolio.Images/ScreenshotWApp1 (47).jpg" alt="pic3"></a>
                                 </div>
                             </div>
                         </div>
