--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>UI/UX</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum iure itaque laborum? Corrupti nesciunt n.</p>
 
                             </div>
@@ -306,7 +306,7 @@
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>Web Site Mangement</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum iure itaque laborum? Corrupti nesciunt n.</p>
 
                             </div>
@@ -316,7 +316,7 @@
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>Programmer</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum iure itaque laborum? Corrupti nesciunt n.</p>
 
                             </div>
@@ -326,7 +326,7 @@
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>IT</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum iure itaque laborum? Corrupti nesciunt n.</p>
 
                             </div>
@@ -336,7 +336,7 @@
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>Database Design</h4>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum iure itaque laborum? Corrupti nesciunt n.</p>
 
                             </div>
@@ -365,21 +365,21 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="MiPizzaProgress.html"><img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic4"></a>
+                                    <a href="https://fsndiaye.github.io/Photography-Website/"><img src="images/TOTOweb.jpg" alt="pic4"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                   <a href="TodoListProgress.html"> <img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic5"></a>
+                                   <a href="https://fsndiaye.github.io/JohnWebsite/"> <img src="images/JohnWeb.jpg" alt="pic5"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                     <a href="WeatherAppProgress.html"><img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic6"></a>
+                                     <a href="#"><img src="Portfolio.Images/0_9c9TBzcHonIf8YUg.jpg" alt="pic6"></a>
                                 </div>
                             </div>
                         </div>
